working version of heat maps/somewhat working version of gingles